<resources>
    <string name="app_name">InSight</string>
    <string name="welcome_message_profile">Welcome, %1$s!</string>
    <string name="register"><u>Register</u></string>
    <string name="click_here_to_reset"><u>Tap here to reset it!</u></string>
    <string name="register_btn"><u>Tap here to register!</u></string>
    <string name="login"><u>Login</u></string>
    <string name="update_email_u"><u>Update Email</u></string>
    <string name="upload_pic_u"><u>Upload new profile picture</u></string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="reset_password"><u>Reset Password</u></string>
    <string name="update_email"><u>Update Email</u></string>
    <string name="authenticate"><u>Authenticate</u></string>
    <string name="go_to_the_stream"><u>Go to the stream</u></string>
    <string name="choose_file"><u>Choose file</u></string>
    <string name="upload"><u>Upload</u></string>
    <string name="show_uploads"><u>Show Uploads</u></string>
    <string name="user_display_picture">User picture</string>
    <string name="loading">Loading...</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="DoB">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone number</string>
    <string name="registered_user_since">Member since</string>
    <string name="view_camera_photos"><u>View Camera photos</u></string>
</resources>