<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/swipeContainer"
android:layout_width="match_parent"
android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadToFirebaseActivity"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <Button
            android:id="@+id/button_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/choose_file" />

        <EditText
            android:id="@+id/edit_text_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/button_choose_image"
            android:hint="Enter a file name" />

        <ImageView
            android:id="@+id/image_view_img_to_upload"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/button_choose_image"
            android:contentDescription="ImageView to Display Pic" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image_view_img_to_upload"
            android:layout_marginTop="20dp"
            android:text="Upload" />

        <TextView
            android:id="@+id/text_view_show_uploads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_img_to_upload"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_toEndOf="@+id/button_upload"
            android:text="@string/show_uploads"
            android:textColor="@color/brown_red" />
        <TextView
            android:id="@+id/text_view_show_unknowns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_img_to_upload"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_toLeftOf="@+id/button_upload"
            android:text="@string/view_camera_photos"
            android:textColor="@color/brown_red" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>