<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeContainer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UserPageActivity"
        android:background="@color/light_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_head"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/muddy_red">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_imageView">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/image_view_profile_pic"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/user_display_picture"
                            android:background="@drawable/default_profile_pic"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>
                    <ProgressBar
                        android:id="@+id/progress_bar_profile_pic"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="110dp"
                        android:layout_centerHorizontal="true"
                        android:elevation="10dp"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/text_view_show_welcome_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/loading"
                    android:textColorHint="@color/black"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="-50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/RL_name">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/img_profile"
                        android:contentDescription="@string/name"
                        android:background="@drawable/profile_img"/>

                    <TextView
                        android:id="@+id/text_view_show_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@id/img_profile"
                        android:hint="@string/loading"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:layout_marginStart="50dp"
                        />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_name"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_name"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_email"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_name">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/img_email"
                        android:contentDescription="@string/email"
                        android:layout_centerVertical="true"
                        android:background="@drawable/email_img"/>

                    <TextView
                        android:id="@+id/text_view_show_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/img_email"
                        android:layout_marginStart="50dp"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:hint="@string/loading"
                        android:layout_marginTop="20dp"
                        />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_email"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_email"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_birthday"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_email">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/img_birthday"
                        android:contentDescription="@string/DoB"
                        android:background="@drawable/birthday_img"/>

                    <TextView
                        android:id="@+id/text_view_show_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/img_birthday"
                        android:hint="@string/loading"
                        android:textColorHint="@color/black"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_dob"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_birthday"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_gender"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_dob">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/img_gender"
                        android:contentDescription="@string/gender"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/gender_img"/>

                    <TextView
                        android:id="@+id/text_view_show_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/img_gender"
                        android:textColorHint="@color/black"
                        android:hint="@string/loading"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_gender"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_gender"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_phone_no"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/divider_gender">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:id="@+id/img_phone_no"
                        android:contentDescription="@string/phone"
                        android:background="@drawable/phone_no_img"/>

                    <TextView
                        android:id="@+id/text_view_show_phone_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@id/img_phone_no"
                        android:textColorHint="@color/black"
                        android:hint="@string/loading"
                        android:layout_marginStart="50dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    android:visibility="gone" />
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
