<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@color/muddy_red">

                <TextView
                    android:id="@+id/text_view_login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:text="Welcome!"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/text_view_login_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Please log in to continue"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/image_email"
                        android:src="@drawable/email_img"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/text_view_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Email"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@id/image_email"/>

                    <View
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:id="@+id/divider_email"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/text_view_login_email"
                        android:background="@android:color/darker_gray"/>

                    <EditText
                        android:id="@+id/edit_text_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_login_email"
                        android:background="@android:color/transparent"
                        android:layout_toEndOf="@id/image_email"
                        android:hint="Enter your email"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textCursorDrawable="@drawable/edittextcursor"
                        android:inputType="textEmailAddress"
                        android:padding="6dp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_pwd"
                    android:layout_below="@id/RL_email"
                    android:background="@drawable/border"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/imagePwd"
                        android:src="@drawable/pwd_img"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/text_view_login_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imagePwd"
                        android:padding="6dp"
                        android:text="Password"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:id="@+id/divider"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/text_view_login_pwd"
                        android:background="@android:color/darker_gray"/>

                    <EditText
                        android:id="@+id/edit_text_login_pwd"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_login_pwd"
                        android:layout_toEndOf="@id/imagePwd"
                        android:background="@android:color/transparent"
                        android:hint="Enter your password"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@drawable/edittextcursor"
                        android:inputType="textPassword"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="6dp"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/image_show_hide_pwd"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_below="@id/text_view_login_pwd" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_pwd"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="70dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_login"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/text_view_register_new_acct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="Do not have an account?"
                        android:textColor="@color/black"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/text_view_register_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/muddy_red"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_login"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="Forgot your password?"
                        android:textColor="@color/black"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/text_view_forgot_password_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/click_here_to_reset"
                        android:textColor="@color/muddy_red"
                        android:textAlignment="center" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>